# ptools

./: .git-blame-ignore-revs  .licenserc.yaml  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.rs
.beads/: README.md  issues.jsonl
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: build.yml  labeler.yml  labels.yml  license.yml  release.yml
debian/: control
examples/: args_env.rs  epoll.rs  netlink.rs  pargs_penv.rs  pcred_process.rs  penv_setenv.rs  pfiles_af_alg.rs  pfiles_epoll.rs  pfiles_matrix.rs  pfiles_matrix_file_link.rs  pfiles_matrix_unix_socket.rs  pfiles_netlink.rs  pfiles_sockopts_parent.rs  pflags_process.rs  plgrp_process.rs  plimit_process.rs  psig_signals.rs  pstack_process.rs  pstop_prun_process.rs  ptree_parent_child.rs  pwait_process.rs
src/: cli.rs  coredump_source.rs  display.rs  lib.rs  proc_source.rs  ptools.rs
src/dw/: mod.rs
src/dw/dwfl/: callbacks.rs  error.rs  frame.rs  handle.rs  mod.rs  module.rs  thread.rs  tracker.rs
src/dw/elf/: mod.rs  symbol.rs
src/dw_sys/: dwarf.rs  libelf.rs  mod.rs
src/dw_sys/elfutils/: gelf.rs  libdw.rs  libdwelf.rs  libdwfl.rs  libdwfl_stacktrace.rs  mod.rs
src/model/: auxv.rs  fd.rs  fdinfo.rs  limits.rs  mod.rs  net.rs  schedstat.rs  stat.rs  status.rs
src/proc/: auxv.rs  coredump.rs  cred.rs  fd.rs  live.rs  mod.rs  net.rs  numa.rs  pidfd.rs  signal.rs
src/source/: apport.rs  coredump.rs  dw.rs  elf.rs  initial.rs  live.rs  mod.rs  systemd.rs
src/stack/: dw.rs  mod.rs
tests/: epoll_test.rs  netlink_test.rs  pargs_penv_test.rs  pcred_test.rs  pfiles_test.rs  pflags_test.rs  plgrp_test.rs  plimit_test.rs  psig_test.rs  pstack_test.rs  pstop_prun_test.rs  ptime_test.rs  ptree_test.rs  pwait_test.rs
tests/common/: mod.rs
