[package]
name = "ptools"
version = "0.2.4"
edition = "2021"
description = "Utilities for inspecting Linux processes"
readme = "README.md"
homepage = "https://github.com/basil/ptools"
repository = "https://github.com/basil/ptools"
license = "Apache-2.0"
keywords = ["linux", "process", "procfs", "debugging", "cli"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
clap_mangen = "0.2.31"
nix = { version = "0.31", features = ["event", "fs", "process", "socket"] }

[profile.release]
debug = true
lto = true
panic = "abort" # Save size. We don't need unwinding anyway.
# TODO is there any way to remove the ability to display backtraces? This would
# likely shave another 50K or so off the binary size, and may not be necessary
# if systems are typically configured to dump core on SIGABRT

[package.metadata.deb]
maintainer = "Basil Crow"
section = "debug"
copyright = "2026 Basil Crow"

extended-description = """\
A collection of utilities for inspecting the state of processes, modeled \
after the tools by the same name which exist on Solaris/illumos."""

separate-debug-symbols = true
assets = [
  # List files we want explicitly so that we don't get the binaries intended for
  # testing.
  ["target/release/pargs", "usr/bin/", "755"],
  ["target/release/penv", "usr/bin/", "755"],
  ["target/release/pfiles", "usr/bin/", "755"],
  ["target/release/ptree", "usr/bin/", "755"],
  ["target/man/pargs.1", "usr/share/man/man1/pargs.1", "644"],
  ["target/man/penv.1", "usr/share/man/man1/penv.1", "644"],
  ["target/man/pfiles.1", "usr/share/man/man1/pfiles.1", "644"],
  ["target/man/ptree.1", "usr/share/man/man1/ptree.1", "644"],
]

[package.metadata.generate-rpm]
vendor = "Basil Crow"
packager = "Basil Crow"
assets = [
  { source = "target/release/pargs", dest = "/usr/bin/pargs", mode = "755" },
  { source = "target/release/penv", dest = "/usr/bin/penv", mode = "755" },
  { source = "target/release/pfiles", dest = "/usr/bin/pfiles", mode = "755" },
  { source = "target/release/ptree", dest = "/usr/bin/ptree", mode = "755" },
  { source = "target/man/pargs.1", dest = "/usr/share/man/man1/pargs.1", mode = "644" },
  { source = "target/man/penv.1", dest = "/usr/share/man/man1/penv.1", mode = "644" },
  { source = "target/man/pfiles.1", dest = "/usr/share/man/man1/pfiles.1", mode = "644" },
  { source = "target/man/ptree.1", dest = "/usr/share/man/man1/ptree.1", mode = "644" },
]
